--- a/package.json
+++ b/package.json
@@ -5,9 +5,19 @@
     "build": "next build"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.575.0",
     "next": "15.1.10",
+    "postcss": "^8.5.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "shadcn": "^3.8.5",
+    "tailwind-merge": "^3.5.0",
+    "tailwindcss": "^4.2.0",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
