--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
     "next": "15.1.10",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
